project2/test/test_11712639_06.spl
int test0(int arg1, int arg2){
    if(arg1 < arg2){
        int a = 10;
        return test1(a);
    }else{
        return 2;
    }
}

int test1(int n){
    if(n < 0){
        return test0(1, 3);
    }else{
        char c = test0(1, 2, 3);
        test0(c, 2);
    }
    return 1;
}